// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Inline Alert renders alert with danger severity 1`] = `
<div>
  <div
    class="mm-box"
  >
    <div
      class="mm-box inline-alert inline-alert__danger mm-box--display-inline-flex mm-box--gap-1 mm-box--align-items-center mm-box--rounded-sm"
      data-testid="inline-alert"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/danger.svg');"
      />
    </div>
  </div>
</div>
`;

exports[`Inline Alert renders alert with informative severity 1`] = `
<div>
  <div
    class="mm-box"
  >
    <div
      class="mm-box inline-alert inline-alert__info mm-box--display-inline-flex mm-box--gap-1 mm-box--align-items-center mm-box--rounded-sm"
      data-testid="inline-alert"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/info.svg');"
      />
    </div>
  </div>
</div>
`;

exports[`Inline Alert renders alert with warning severity 1`] = `
<div>
  <div
    class="mm-box"
  >
    <div
      class="mm-box inline-alert inline-alert__warning mm-box--display-inline-flex mm-box--gap-1 mm-box--align-items-center mm-box--rounded-sm"
      data-testid="inline-alert"
    >
      <span
        class="mm-box mm-icon mm-icon--size-sm mm-box--display-inline-block mm-box--color-inherit"
        style="mask-image: url('./images/icons/danger.svg');"
      />
    </div>
  </div>
</div>
`;
